recovery: restore heap-based storage after FFM migration deletion
Restored the following components:
- Heap storage: GeneratedTable, PageColumn*, AbstractTable, TableGenerator
- Arena feature: MemrisArena with isolated data spaces
- Repository infrastructure: MemrisRepositoryFactory, RepositoryRuntime, RepositoryPlan
- Supporting classes: EntityMetadata, MetadataExtractor, TypeConverterRegistry
- Query infrastructure: QueryCompiler (stub), RepositoryEmitter

All files compile successfully. Tests passing: 154 total, arena tests 3/6.

Note: RepositoryRuntime.executeMethod() needs implementation for full query support.